--- a/index.html
+++ b/index.html
@@ -87,11 +87,13 @@ function drawAll(){
   drawPixFace(svg3,versor.multiply(versL,q));
   drawPixFace(svg4,versor.multiply(versD,q));
   drawPixFace(svg5,versor.multiply(versU,q));
-  svg3.append("rect")
-    .attr("x",-0.2*tileUnit)
-    .attr("y",-0.6*tileUnit)
-    .attr("width",1.649*tileUnit)
-    .attr("height",1.0696*tileUnit)
+
+  // SCREEN
+  // svg3.append("rect")
+  //   .attr("x",-0.2*tileUnit)
+  //   .attr("y",-0.6*tileUnit)
+  //   .attr("width",1.649*tileUnit)
+  //   .attr("height",1.0696*tileUnit)
 }
 
 
