Graticule offsetted as shape, not path. Two versions for performance.

--- a/index_cuts.html
+++ b/index_cuts.html
@@ -13,7 +13,7 @@
 
 
 <script src="./pixcube-tj.js"></script>
-<script src="./facelet.js"></script>
+<script src="./facelet_cuts.js"></script>
 
 <link rel="stylesheet" href="./style.css">
 
@@ -27,7 +27,8 @@
       φ = <input id="phi" type="number" min=-180 max=180 value=-43 /> <br>
       γ = <input id="gamma" type="number" min=-180 max=180 value=20 /> <br>
       <button id="UpdateBtn"> Update </button> <br>
-      <button id="SaveBtn"> Get printable SVG </button>
+      <button id="SaveBtn"> Get printable SVG </button> <br>
+      WARNING: This version of the app will optimize the output SVG, and it can take several minutes to load. Please be patient.
 
     </div>
     <svg id="svg5"></svg>
